# mcp-langchain

./: .env  .gitignore  README.md  chat_server.py  math-client.py  math-server.py  mcp_demo.py  memory.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_sse_test_server.sh  setup.py  sse_test.html  start_server.sh  test_both_languages.py  test_chinese_text.py  test_imports.py  test_sse_server.py
.cursor/rules/: langchain.mdc
mcp_client_local_code/: pyproject.toml
mcp_vue_frontend/: index.html  package-lock.json  package.json  simple.html  tsconfig.app.json  vite.config.ts
mcp_vue_frontend/public/: compat.html  fix-test.html  mcp_direct_test.html  test.html
mcp_vue_frontend/src/: App.vue  main.js  main.ts  style.css  vuex.d.ts
mcp_vue_frontend/src/components/: ChatMessage.vue  ChatMessage.vue.bak  CodeBlock.vue  CodeFormatter.vue  ExampleChat.vue  LLMErrorAlert.vue  MarkdownChat.vue  MarkdownRenderer.vue  ServerConfigCard.vue  ServerStatusModal.vue  WebSocketTestComponent.vue
mcp_vue_frontend/src/router/: index.ts
mcp_vue_frontend/src/services/: apiService.ts  apiService.ts.backup  streamService.ts
mcp_vue_frontend/src/store/: index.ts
mcp_vue_frontend/src/views/: LLMManagementView.vue  ServerConfigDashboard.vue  ServerConfigFormView.vue  ServerControlsDashboard.vue  ServerManagementView.vue
mcp_web_app/: ._services  __init__.py  config_manager.py  langchain_agent_service.py  llm_configs.json  main.py  main.py.bak2  servers.json
mcp_web_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_web_app/models/: __init__.py  models.py  ollama.py
mcp_web_app/services/: agent_utils.py  config_manager.py  langchain_agent_service.py  mcp_adapter.py  mcp_client.py  process_manager.py  route_handlers.py  session_utils.py  websocket_handlers.py
mcp_web_app/services/agent/: __init__.py  agent_factory.py  callbacks.py  dispatcher.py  (+6 more)
mcp_web_app/utils/: __init__.py  chat.py  config.py  custom_event_handler.py  events.py  io.py  lifecycle.py  llm.py  mcp_tool_scripthost.py  ollama.py  server.py  session.py  templates.py  token_utils.py
src/services/: apiService.ts
src/views/: LLMManagementView.vue  ServerConfigFormView.vue  ServerControlsDashboard.vue
