[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client"
version = "0.1.0" # Or your actual local version
description = "Local MCP Client Library"
# Add other fields as necessary, e.g., authors, readme
# Ensure this package doesn't list mcp_web_app as a dependency to avoid circular dependencies.
dependencies = [
    # Add any direct dependencies of the mcp-client library itself
    # For example:
    # "httpx",
    # "websockets",
    # "pydantic" 
]

# If your mcp_client source code is further nested, e.g., in an mcp_client/src/mcp_client,
# you might need to configure [tool.hatch.build.targets.wheel.sources]
# but for a simple structure where __init__.py and other .py files are directly in 
# /Users/zaedinzeng/projects/mcp-client/mcp_client/, this should be fine. 